src/FinancialForce Accounting/objects/codaPaymentLineItem__c.object
<CustomObject>
    <customHelpPage>codahelppayment</customHelpPage>
    <description>Transaction line selected for each payment.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>PaymentLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BelongToCurrentRefine__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Belong To Current Refine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocumentNumber__c</fullName>
        <label>Document Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GrossValue__c</fullName>
        <label>Gross Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaymentAccountLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Account Line Item</label>
        <referenceTo>codaPaymentAccountLineItem__c</referenceTo>
        <relationshipName>PaymentLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentSummary__c</fullName>
        <label>Payment Summary</label>
        <referenceTo>codaPaymentAccountLineItem__c</referenceTo>
        <relationshipLabel>Payment Detail Line Items (Payment Summary)</relationshipLabel>
        <relationshipName>PaymentDetailLineItems</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <referenceTo>codaPayment__c</referenceTo>
        <relationshipName>PaymentLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TransactionDate__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TransactionLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Line Item</label>
        <referenceTo>codaTransactionLineItem__c</referenceTo>
        <relationshipLabel>Payment Details</relationshipLabel>
        <relationshipName>PaymentLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TransactionSelected__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Transaction Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TransactionValue__c</fullName>
        <label>Transaction Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>codaTransaction__c</referenceTo>
        <relationshipLabel>Payment Details</relationshipLabel>
        <relationshipName>PaymentLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payment Detail</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Payment Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>